cap3 fino a convertitori

--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,42 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-12 00:46:20 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-12 12:13:48 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{sitedac902,
+	Title = {http://www.ti.com/lit/ds/symlink/dac902.pdf},
+	Date-Added = {2015-11-12 11:11:22 +0000},
+	Date-Modified = {2015-11-12 11:11:34 +0000},
+	Url = {http://www.ti.com/lit/ds/symlink/dac902.pdf}}
+
+@mastersthesis{thesissmldis,
+	Author = {S. Disegna},
+	Date-Added = {2015-11-12 10:20:50 +0000},
+	Date-Modified = {2015-11-12 10:21:42 +0000},
+	School = {Politecnico di Milano},
+	Title = {Struttura Hardware per Interferometria a Self-Mixing},
+	Year = {2015}}
+
+@mastersthesis{thesisstorti,
+	Author = {D. Storti},
+	Date-Added = {2015-11-12 10:06:08 +0000},
+	Date-Modified = {2015-11-12 10:06:32 +0000},
+	School = {Politecnico di Milano},
+	Title = {Misuratore di distanza assoluto basato sulla interferometria a retro-iniezione},
+	Year = {2014}}
+
+@mastersthesis{thesispallsilv,
+	Author = {Palludo A. and Silvano A},
+	Date-Added = {2015-11-12 10:05:04 +0000},
+	Date-Modified = {2015-11-12 10:05:50 +0000},
+	School = {Politecnico di Milano},
+	Title = {Sistema ottico a retroiniezione per la misura di distanza assoluta},
+	Year = {2015}}
 
 @mastersthesis{thesismelch,
 	Author = {D. Melchionni},
@@ -101,3 +131,10 @@
 	Volume = {4},
 	Year = {2002},
 	Bdsk-Url-1 = {http://stacks.iop.org/1464-4258/4/i=6/a=371}}
+
+@book{storeyelet,
+	Author = {N. Storey},
+	Edition = {Fourth},
+	Publisher = {Pearson Education},
+	Title = {Electronics: A Systems Approach},
+	Year = {2009}}
