--- a/latex_source/frontespizio.tex
+++ b/latex_source/frontespizio.tex
@@ -9,7 +9,7 @@
   Corso di Laurea \textbf{MAGISTRALE} in Ingegneria Informatica\\
   \begin{figure}[htbp]
     \begin{center}
-      \includegraphics[width=3.5cm]{./pictures/logopm}
+      \includegraphics[width=3.5cm]{./pictures/frontesp/newlogopm1}
 %	\psfig{file=./pictures/logopm.jpg,width=3.5cm}
     \end{center}
   \end{figure}
@@ -34,7 +34,7 @@
 \begin{flushright}
 
 
-  Tesi di Laurea Magistrale di:\\ Leonardo Cavagnis, matricola 816646 \\ 
+  Tesi di Laurea di:\\ Leonardo Cavagnis, matricola 816646 \\ 
 		       Diego Rondelli, matricola 817108 \\
 
 
